# BIllCast

./: .gitignore  Procfile  README.md  docker-compose.yml  package.json  release.sh  requirements.txt
backend/: .env.example  .env.pg  Dockerfile  pyproject.toml  readme.md  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2980a5855f59_create_item_and_deal_table.py  609c730a5594_create_init_tables.py  7a781f90fc7d_baseline.py  ec211e685f34_unit_unique_together.py  ef389f9c4716_add_link_to_user.py
backend/bill_cast/: cruds.py  initial_data.py  main.py  utils.py
backend/bill_cast/api/: deps.py
backend/bill_cast/api/api_v1/: api.py
backend/bill_cast/api/api_v1/endpoint/: login.py  shop.py  tax_group.py  unit.py  users.py
backend/bill_cast/core/: config.py  security.py
backend/bill_cast/crud/: __init__.py  base.py  crud_shop.py  crud_tax_group.py  crud_unit.py  crud_user.py
backend/bill_cast/db/: base.py  init_db.py  session.py
backend/bill_cast/models/: __init__.py  deal.py  item.py  shop.py  tax_group.py  unit.py  user.py
backend/bill_cast/schemas/: __init__.py  deal.py  item.py  msg.py  shop.py  tax_group.py  unit.py
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
